--- a/public/app/routes/cart/cart.html
+++ b/public/app/routes/cart/cart.html
@@ -34,7 +34,7 @@
     <p>payments <span class= 'itemcartPrice'>-{{paymentAmount | currency}}</span></p>
     <p>Total <span class= 'itemcartPrice'>{{totalPrice - paymentAmount | currency}}</span></p>
     <p>Shipping &amp; taxes calculated at checkout</p>
-    <button type="button" ng-click='reloadRoute()' class='whiteButton' name="button">UPDATE CART</button>
+    <!-- <button type="button" ng-click='reloadRoute()' class='whiteButton' name="button">UPDATE CART</button> -->
     <button type="button" ui-sref='checkout' class='orangeButton' id='noButtonMargin' name="button">CHECK OUT</button>
   </div>
 </div>
