--- a/public/app/routes/payments/payments.html
+++ b/public/app/routes/payments/payments.html
@@ -8,7 +8,7 @@
 
   <ul>
   <li>
-    <input type="radio" id="f-option" ng-change='correctBar()' name="selector" ng-model="boardValue" value="1499">
+    <input type="radio" id="f-option" ng-change='correctBar()' checked='true' name="selector" ng-model="boardValue" value="1499">
     <label for="f-option">Dual+</label>
 
     <div class="check"></div>
@@ -35,7 +35,6 @@
   </li>
 </ul>
 </div>
-    <button type="button" class='orangeButton removeMargin' ng-click='addBoard()' name="button">Checkout</button>
     <button type="button" class='whiteButton removeMargin' name="button" ng-click='logout()'>Log Out</button>
     <br/>
 
