project completed just need to host to blueOcean and add domain

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 </head>
 
 <body>
-
-    <ui-view></ui-view>
+  <div class="RemoveOutline">
+    <ui-view autoscroll='true' ></ui-view>
+  </div>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOznoEuNKgX_FJ8ptlpaMqClSbmjTndXQ&callback=initMap">
     </script>
