--- a/public/app/routes/board/board.html
+++ b/public/app/routes/board/board.html
@@ -61,6 +61,7 @@
 <section>
     <div class="uphillBoard">
         <div class="breeze">
+          <div class="breezeContent">
             <p class='breezeTitle'>Make Your uphill</p>
             <p class='breezeTitle'>battle a breeze</p>
             <p class='breezeDesc'>Never shy away from a daunting hill again! Race up steep inclines with smooth, responsive acceleration. With Boosted Dual+, you have access up to 4 times the power that elite Tour de France riders generate when climbing a mountain–that’s a
@@ -79,6 +80,7 @@
                         <img class='photo' src="../../img/theBoard/chargeIcon.PNG" alt="">
                     </div>REGENERATIVE BRAKING</div>
             </div>
+          </div>
         </div>
         <div class="breezeBelt">
           <p class="beltTitle">WHY A BELT DRIVE SYSTEM?</p>
@@ -188,6 +190,7 @@
 <section>
   <div class="worryLessContainer">
     <div class="breeze">
+      <div class="breezetwoContent">
         <p class='breezeTitle'>Worry less,</p>
         <p class='breezeTitle'>Ride more</p>
         <p class='breezeDesc'>Your board will last for years and
@@ -210,6 +213,7 @@
                     <img class='photo' src="../../img/theBoard/gearIcon.PNG" alt="">
                 </div>6-MONTH WARRANTY</div>
         </div>
+      </div>
     </div>
   </div>
 </section>
