fixing picture names

--- a/public/app/routes/home/home.html
+++ b/public/app/routes/home/home.html
@@ -25,7 +25,7 @@
 </div>
 <div class="homeHillContainer">
     <div class="hillImg">
-        <img class='photo heightFix' src="../../img/homePage/upHill.PNG" alt="">
+        <img class='photo heightFix' src="../../img/homePage/uphill.PNG" alt="">
     </div>
     <div class="hillInfo">
         <p class='homeHillTitle'>Climb any hill. </br> Stop any time</p>
@@ -33,7 +33,7 @@
             abruptly stop mid descent. No sweat, no second thought.</p>
         <table class="hillTableInfo">
             <tr>
-                <th class='tableInfo'><img class='photo iconInfo' src="../../img/homePage/upHillIcon.PNG" alt=""></th>
+                <th class='tableInfo'><img class='photo iconInfo' src="../../img/homePage/uphillIcon.PNG" alt=""></th>
                 <th>25% GRADE HILL-CLIMBING</th>
             </tr>
             <tr>
